# texture-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dragon.json
shaders/: faceSelector.frag.glsl  faceSelector.vert.glsl  highlight.frag.glsl  point.frag.glsl  point.vert.glsl  preview.frag.glsl  preview.vert.glsl  screen.frag.glsl  screen.vert.glsl  uv.frag.glsl  wireframe.frag.glsl  wireframe.vert.glsl
src/: CMakeLists.txt  main.cpp  mesh.cpp  mesh.h  screen.h  textureEditor.cpp  textureEditor.h  textures.cpp  textures.h
src/utils/: camera.cpp  camera.h  dbg.h  includes.h  mouse.cpp  mouse.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.cpp  transform.h  utils.cpp  utils.h
